<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etOne"
        android:layout_marginTop="20dp"
        android:hint="Text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etTwo"
        android:hint="Text"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/etOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnPlus"
        android:layout_marginTop="10dp"
        android:text="Plus"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/etTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvResult"
        android:gravity="center"
        android:text="Result"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btnPlus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmail"
        android:hint="Email"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnCheckEmail"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="20dp"
        android:text="Email"
        android:backgroundTint="@color/teal_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvResultNumber"
        app:layout_constraintTop_toBottomOf="@id/btnCheckEmail"
        android:layout_marginTop="30dp"
        android:text="Number"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etNumber"
        app:layout_constraintTop_toBottomOf="@id/tvResultNumber"
        android:layout_marginTop="30dp"
        android:hint="Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnCheckNumber"
        app:layout_constraintTop_toBottomOf="@id/etNumber"
        android:backgroundTint="@color/teal_700"
        android:text="Number"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>